Fix calendar picker being cropped out when not enough ingredients can be shown in the shopping list

--- a/recipe-front-end/src/components/shopping-list/ShoppingListMain.scss
+++ b/recipe-front-end/src/components/shopping-list/ShoppingListMain.scss
@@ -1,4 +1,8 @@
 .shopping-list {
+    .card-content {
+      overflow: initial;  
+    }
+
     input {
       width: 3em;
       border: 1px solid lightgray;
@@ -6,6 +10,10 @@
   
     p {
       margin-top: 0.5em;
+    }
+
+    .float-left {
+      float: left;
     }
   }
   
